# multiverse-chess-reader

./: .gitignore  Cargo.toml  README.md  board_reversing.txt  branching2.xcf  complex_board.xcf  config  rookIV.xcf
.cargo/: config
docs/: notes.md
src/: cli.rs  game_data.rs  lib.rs  main.rs  notation.rs
src/game_interface/: mod.rs  reading.rs  windows.rs  writing.rs
