[package]
name = "multiverse-chess-reader"
version = "0.1.0"
authors = ["Alex Kinley <awkinley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-memory = "0.4"
num_enum = "0.5.1"
retry = "1.2.0"
fixed = "1.6.0"
lexers = "0.1.3"
lapp = "0.4.0"
log4rs = "1.0.0"
log = "0.4.14"
lazy_static = "1.4.0"
enum-map = "0.6.4"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["tlhelp32", "psapi"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "memoryapi", "minwindef", "processthreadsapi", "errhandlingapi"] }